# Agentic-Discovery-Platform

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  tasks.py
.github/: CODEOWNERS  pull_request_template.md
explorer/: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
prototype/: .coveragerc  .env.example  README.md  pyproject.toml  requirements.txt  run.py
prototype/discovery/: agent_loop.py  assemble.py  docnames.py  env.py  llm.py  loader.py  models.py  refresh.py  registry.py  report.py  resolve.py  stages.py  synthesis.py  tools.py
prototype/discovery/reportsuite/: assets.py  build.py  render.py
prototype/docs/: DESIGN_SPEC_o2c_discovery.md  DESIGN_SPEC_report_suite.md  INPUT_CONTRACT.md  VERIFIED_NUMBERS.md
prototype/inputs/o2c/: _README.md  _manifest.json
prototype/inputs/o2c/pdftext/: edi-integration-register-opella-europe.txt  o2c-process-raci-opella-europe.txt  order-management-sop-opella-europe.txt
prototype/inputs/p2p/: purchase-order-export.csv
prototype/inputs/p2p/pdftext/: procurement-policy.txt
prototype/scripts/: doctor.py  make_pdf.py
prototype/tests/: smoke_test.py  test_agent_loop.py  test_agent_loop_orchestration.py  test_build.py  test_conformance.py  test_docnames.py  test_misc_coverage.py  test_provenance.py  test_refresh.py  test_render_branches.py  test_suite.py  test_synthesis.py  test_tools_errors.py
research/: README.md  UI-and-UX-research.md  competitor-apm-rationalization.md  gaps-we-can-exploit.md  (+5 more)
(+179 files in other folders)
